--- a/Random-Forst.ipynb
+++ b/Random-Forst.ipynb
@@ -10,6 +10,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import os\n",
+    "import random\n",
     "\n",
     "from pandas.api.types import CategoricalDtype\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
@@ -19,7 +20,9 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "%matplotlib inline\n",
-    "DATA_PATH = './data/'"
+    "DATA_PATH = './data/'\n",
+    "seed = 1\n",
+    "np.random.seed(seed)"
    ]
   },
   {
@@ -63,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data, test_data = load_adult()    \n"
+    "train_data, test_data = load_adult()    "
    ]
   },
   {
@@ -230,22 +233,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf = RandomForestClassifier(n_estimators=100, \n",
-    "                            criterion = 'gini', \n",
-    "                            max_features = None,  \n",
-    "                            min_samples_split = 0.05, \n",
-    "                            min_samples_leaf = 0.001)"
+    "rf = RandomForestClassifier(n_estimators=1000, \n",
+    "                            criterion='gini', \n",
+    "                            max_features=None,  \n",
+    "                            min_samples_split=0.05, \n",
+    "                            min_samples_leaf=0.001,\n",
+    "                            n_jobs=-1,\n",
+    "                            random_state=seed)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 12.8 s\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -254,17 +266,18 @@
        "                       max_leaf_nodes=None, max_samples=None,\n",
        "                       min_impurity_decrease=0.0, min_impurity_split=None,\n",
        "                       min_samples_leaf=0.001, min_samples_split=0.05,\n",
-       "                       min_weight_fraction_leaf=0.0, n_estimators=100,\n",
-       "                       n_jobs=None, oob_score=False, random_state=None,\n",
-       "                       verbose=0, warm_start=False)"
+       "                       min_weight_fraction_leaf=0.0, n_estimators=1000,\n",
+       "                       n_jobs=-1, oob_score=False, random_state=1, verbose=0,\n",
+       "                       warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "%%time\n",
     "rf.fit(X_train_processed, y_train)"
    ]
   },
@@ -285,7 +298,7 @@
     {
      "data": {
       "text/plain": [
-       "0.8520361157177078"
+       "0.852158958294945"
       ]
      },
      "execution_count": 12,
